tests/baselines/reference/contextualTyping12.errors.txt
contextualTyping12.ts(1,57): error TS2353: Object literal may only specify known properties, and 'name' does not exist in type '{ id: number; }'.


==== contextualTyping12.ts (1 errors) ====
    class foo { public bar:{id:number;}[] = [{id:1}, {id:2, name:"foo"}]; }
                                                            ~~~~
!!! error TS2353: Object literal may only specify known properties, and 'name' does not exist in type '{ id: number; }'.